feat: Finish Translate google sheets command

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1,148 +1,195 @@
 {
-    "Австралия": "Australia",
-    "Азия": "Asia",
-    "Анастасия": "Anastasia",
-    "Антарктида": "Antarctica",
-    "Апартаменты": "Apartments",
-    "Африка": "Africa",
-    "Балкон": "Balcony",
-    "Бассейн": "Pool",
-    "Без комиссии": "No commission",
-    "В избранное": "اضافة الى المفضلة",
-    "ВНЖ в подарок": "Gift of Residence Permit",
-    "ВНЖ и Гражданство": "Residence Permit and Citizenship",
-    "Валюта": "Currency",
-    "Ванна": "Bath",
-    "Ванные": "Bathrooms",
-    "Ваш телефон": "Your phone number",
-    "Весь": "All",
-    "Вид": "View",
-    "Все": "All",
-    "Все локации": "All locations",
-    "Все типы": "All types",
+    "Oneteam подготовит для вас пул доступных вариантов, предоставит переводчика и юриста, и обеспечит бережное сопровождение на каждом этапе сделки.": "سيقوم Oneteam بإعداد مجموعة من الخيارات المتاحة لك، وتوفير مترجم ومحامي، وتقديم الدعم الدقيق في كل مرحلة من مراحل المعاملة.",
+    "Австралия": "أستراليا",
+    "Азия": "آسيا",
+    "Анастасия": "اناستازيا",
+    "Антарктида": "القارة القطبية الجنوبية",
+    "Апартаменты": "شقق سكنية",
+    "Африка": "أفريقيا",
+    "Балкон": "شرفة",
+    "Бассейн": "حمام سباحة",
+    "Без комиссии": "لا عمولة",
+    "Благодаря налаженному партнерству с турецкими банками Oneteam осуществляет продажу недвижимости в Турции в рассрочку, в ипотеку (кредит) под минимальные проценты.": "بفضل الشراكات القائمة مع البنوك التركية، تبيع Oneteam العقارات في تركيا بالتقسيط، برهن عقاري (قرض) بأقل فائدة.",
+    "В избранное": "إلى المفضلة",
+    "В портфеле Oneteam представлены высоколиквидные объекты, предназначенные для разных целей: для инвестиций, сдачи в аренду и просто для комфортной жизни. Все они поступают к нам напрямую от застройщиков, минуя посредников, и это значит, что мы можем предложить вам лучшие цены на них.": "تتضمن محفظة Oneteam عقارات عالية السيولة مخصصة لأغراض مختلفة: للاستثمار والتأجير وببساطة لحياة مريحة. تأتي جميعها إلينا مباشرة من المطورين، متجاوزة الوسطاء، وهذا يعني أنه يمكننا أن نقدم لك أفضل الأسعار لهم.",
+    "ВНЖ в подарок": "تصريح الإقامة كهدية",
+    "ВНЖ и Гражданство": "تصريح الإقامة والجنسية",
+    "Валюта": "عملة",
+    "Ванна": "حمام",
+    "Ванные": "الحمامات",
+    "Ваш телефон": "رقم تليفونك",
+    "Весь": "الجميع",
+    "Вид": "منظر",
+    "Возьмем вашу недвижимость в управление": "دعونا السيطرة على الممتلكات الخاصة بك",
+    "Все": "الجميع",
+    "Все локации": "جميع المواقع",
+    "Все регионы": "كل المناطق",
+    "Все сделки заключаются в соответствии с турецким законодательством и с применением инструментов минимизации рисков, а мы отчитываемся перед вами по всем производимым операциям — в том числе и финансовым.": "يتم إبرام جميع المعاملات وفقًا للتشريعات التركية وباستخدام أدوات تقليل المخاطر، ونقوم بإبلاغك بجميع المعاملات التي يتم إجراؤها، بما في ذلك المعاملات المالية.",
+    "Все типы": "كل الانواع",
     "Всего": "المجموع",
-    "Вся": "All",
-    "Горы": "Mountains",
-    "Гостиные": "Living rooms",
-    "Гражданство": "Citizenship",
+    "Вся": "الجميع",
+    "Вторичка": "ثانوي",
+    "Выбирая Oneteam": "اختيار فريق واحد",
+    "Выгодные условия": "شروط مربحة",
+    "Горы": "الجبال",
+    "Гостиные": "غرف المعيشة",
+    "Гражданство": "المواطنة",
+    "Давайте познакомимся.": "دعونا تعرف.",
     "До": "قبل",
-    "До 1 км": "Up to 1 km",
-    "До 2 км": "Up to 2 km",
-    "До 500 м": "Up to 500 m",
-    "До моря": "To the sea",
+    "До 1 км": "ما يصل إلى 1 كم",
+    "До 2 км": "ما يصل إلى 2 كم",
+    "До 500 м": "يصل إلى 500 م",
+    "До моря": "الى البحر",
     "Дом": "منزل",
-    "Дома, вилы, коттеджи": "Houses, villas, cottages",
-    "Европа": "Europe",
-    "Если у вас есть вопросы": "If you have questions",
-    "Если у вас есть вопросы, оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "If you have any questions, leave your contact details and we will get in touch with you as soon as possible",
-    "Еще": "More",
-    "Жилая": "Residential",
-    "Заказать просмотр": "Request a viewing",
-    "Замки": "Castles",
-    "Запросить актуальные проекты": "Request current projects",
-    "Избранное": "Favorites",
-    "Инвестиции": "Investments",
-    "Интернет": "Internet",
-    "История": "History",
-    "Квартиры": "Flats",
-    "Квартиры под аренду": "Apartments for rent",
-    "Команда": "Team",
-    "Коммерческая": "Commercial",
-    "Консультант по продажам": "Sales consultant",
-    "Контакты": "Contacts",
-    "Купить": "Purchase",
-    "Купить в рассрочку": "Buy in installments",
-    "Лес": "Forest",
-    "Локаций": "Locations",
-    "Локация": "Location",
-    "Материк": "Locations",
-    "Мебель": "Furniture",
-    "Миссия": "Mission",
-    "Мы предлагаем готовые стратегии инвестирования в зарубежную недвижимость": "We offer ready-made strategies for investing in overseas real estate",
-    "Найти": "Search",
-    "Неважно": "Doesn't matter",
-    "Недвижимость": "Real estate",
-    "Новостройки": "New buildings",
-    "О компании": "About the company",
-    "О проекте": "About the project",
-    "Общая": "Total",
-    "Общая площадь": "Total area",
-    "Объекты для получения гражданства :name за инвестиции": "Objects for obtaining :name citizenship by investment",
-    "Объявление": "Ad",
-    "Объявлений": "Advertisement",
-    "Объявлений не найдено": "Ads not found",
-    "Объявления": "Advertisements",
-    "Озеро": "Lake",
-    "Ознакомлен с": "Familiarized with",
-    "Ознакомлен с политикой конфиденциальности": "I have read the privacy policy",
-    "Описание": "Description",
-    "Оплата криптовалютой": "Cryptocurrency payment",
-    "Особенности": "Features",
+    "Дома, вилы, коттеджи": "منازل، فلل، أكواخ",
+    "Дома. виллы, коттеджи": "في البيت. الفلل والبيوت",
+    "Европа": "أوروبا",
+    "Если у вас есть вопросы": "إذا كان لديك أسئلة",
+    "Если у вас есть вопросы, оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "إذا كانت لديك أسئلة، اترك تفاصيل الاتصال الخاصة بك وسوف نتصل بك في أقرب وقت ممكن",
+    "Еще": "أكثر",
+    "Жилая": "سكني",
+    "Заказать просмотр": "عرض الطلب",
+    "Замки": "أقفال",
+    "Запросить актуальные проекты": "طلب المشاريع الحالية",
+    "Заявка на бронь": "طلب الحجز",
+    "Иванов Алексей Петрович": "إيفانوف أليكسي بتروفيتش",
+    "Избранное": "المفضلة",
+    "Инвестиции": "الاستثمارات",
+    "Интернет": "إنترنت",
+    "История": "قصة",
+    "Квартиры": "شقق سكنية",
+    "Квартиры под аренду": "شقق للإيجار",
+    "Квартиры, апартаменты": "شقق، شقق",
+    "Клиентоориентированность": "التركيز على العملاء",
+    "Команда": "فريق",
+    "Коммерческая": "تجاري",
+    "Компания": "شركة",
+    "Консультант по продажам": "استشاري المبيعات",
+    "Контакты": "جهات الاتصال",
+    "Купить": "يشتري",
+    "Купить в рассрочку": "شراء بالتقسيط",
+    "Лес": "غابة",
+    "Локации": "المواقع",
+    "Локаций": "المواقع",
+    "Локация": "موقع",
+    "Лучшие цены": "أفضل الأسعار",
+    "Материк": "البر الرئيسى",
+    "Мебель": "أثاث",
+    "Меня зовут Фаиг Ализаде, я — владелец агентства": "اسمي فائق علي زاده، أنا صاحب الوكالة",
+    "Миссия": "مهمة",
+    "Мы знаем, что сориентироваться в рынке недвижимости другой страны сложно, и заботимся о том, чтобы процесс покупки прошел для вас максимально комфортно.": "نحن نعلم أنه من الصعب التنقل في سوق العقارات في بلد آخر، ونتأكد من أن عملية الشراء مريحة قدر الإمكان بالنسبة لك.",
+    "Мы не просто продаем недвижимость от застройщика в Турции, а имеем личные договоренности со строительными компаниями.": "نحن لا نبيع العقارات من المطور في تركيا فحسب، بل لدينا اتفاقيات شخصية مع شركات البناء.",
+    "Мы предлагаем готовые стратегии инвестирования в зарубежную недвижимость": "نحن نقدم استراتيجيات جاهزة للاستثمار في العقارات الأجنبية",
+    "Найти": "يجد",
+    "Наша сфера деятельности — сделки с недвижимостью в Турции: мы помогаем клиентам купить, продать, арендовать или сдать в аренду коммерческие и жилые объекты.": "مجال نشاطنا هو المعاملات العقارية في تركيا: نحن نساعد العملاء على شراء أو بيع أو تأجير أو استئجار العقارات التجارية والسكنية.",
+    "Наши преимущества": "إيجابياتنا",
+    "Неважно": "لا يهم",
+    "Недвижимость": "العقارات",
+    "Новостройки": "مباني جديدة",
+    "Номер телефона": "رقم التليفون",
+    "О компании": "عن الشركة",
+    "О проекте": "حول المشروع",
+    "Обеспечим постпродажный сервис": "سوف نقدم خدمة ما بعد البيع",
+    "Обеспечим юридическое сопровождение на всех этапах сделки": "سنقدم الدعم القانوني في جميع مراحل الصفقة",
+    "Общая": "عام",
+    "Общая площадь": "المساحة الكلية",
+    "Объекты для получения гражданства :name за инвестиции": "أهداف الحصول على الجنسية :الاسم عن طريق الاستثمار",
+    "Объявление": "إعلان",
+    "Объявлений": "إعلانات",
+    "Объявлений не найдено": "لم يتم العثور على إعلانات",
+    "Объявления": "إعلانات",
+    "Озеро": "بحيرة",
+    "Ознакомлен с": "تعرف على",
+    "Ознакомлен с политикой конфиденциальности": "لقد قرأت سياسة الخصوصية",
+    "Описание": "وصف",
+    "Оплата криптовалютой": "الدفع بالعملة المشفرة",
+    "Особенности": "الخصائص",
     "От": "من",
-    "От застройщика": "From developer",
-    "Отзывы": "Reviews",
-    "Отправить заявку": "Send request",
-    "Паркинг в подарок": "Free Parking",
-    "Парковка": "Parking",
-    "Партнерам": "For partners",
-    "Пентхаусы": "Penthouses",
-    "Первая линия": "First line",
-    "Планировки квартир": "Apartment layouts",
-    "Площади (кв.м)": "Area (sq.m)",
-    "Площади кв.м.": "Square meters",
-    "Площадь (кв.м)": "Square (sq.m)",
-    "Пляж": "Beach",
-    "Покупка недвижимости": "Buy real estate",
-    "Политика обработки персональных данных": "Data processing policy",
-    "Пользовательское соглашение при использовании данных": "User agreement on data use",
-    "Пользовательское соглашение при использовании сайта": "User agreement on data use",
-    "Популярные локации": "Popular locations",
-    "Пресса": "Press",
-    "Прессе": "Press",
-    "Работа у нас": "Work with us",
-    "Расположение и инфраструктура": "Location and infrastructure",
-    "Рассрочка": "Installment plan",
-    "Регион": "Locations",
-    "Регионы": "Regions",
-    "Сад": "Garden",
-    "Свяжитесь с нами": "Contact us",
-    "Связаться": "Contact",
-    "Северная Америка": "North America",
-    "Сначала дешевые": "Cheapest first",
-    "Сначала дешёвые": "Cheapest first",
-    "Сначала дорогие": "Most expensive first",
-    "Сначала новые": "Newest first",
-    "Снять": "Rent",
-    "Согласен на обработку": "I agree to processing",
-    "Согласен на обработку персональных данных": "I agree to the processing of personal data",
+    "От застройщика": "من المطور",
+    "Отзывы": "التعليقات",
+    "Отправить заявку": "ارسل طلب",
+    "Офис агентства расположен в Анталье; зоны нашего особого интереса — это Манавгат, Кемер, Белек, Финике, Сиде, Алания, Махмутлар, Авсаллар, Каргыджак, Кестел. Также мы активно работаем и в других регионах Турецкой Республики, в частности, в Мерсине, Бодруме, Фетхие.": "يقع مكتب الوكالة في أنطاليا. مناطقنا ذات الأهمية الخاصة هي مانافجات، كيمير، بيليك، فينيك، سيده، ألانيا، محمودلار، أفسالار، كارجيجاك، كيستيل. نحن نعمل أيضًا بنشاط في مناطق أخرى من الجمهورية التركية، ولا سيما في مرسين وبودروم وفتحية.",
+    "Паркинг в подарок": "وقوف السيارات كهدية",
+    "Парковка": "موقف سيارات",
+    "Партнерам": "للشركاء",
+    "Пентхаусы": "بنتهاوس",
+    "Первая линия": "السطر الأول",
+    "Планировки квартир": "مخططات الشقق",
+    "Площади (кв.м)": "المساحة (متر مربع)",
+    "Площади кв.м.": "المساحة متر مربع",
+    "Площадь (кв.м)": "المساحة (متر مربع)",
+    "Пляж": "شاطئ",
+    "Подберем объекты под ваш запрос": "سوف نقوم باختيار الأشياء وفقا لطلبك",
+    "Пока другие подбирают объекты недвижимости вручную, мы разработали собственный IT-продукт на базе искусственного интеллекта, который анализирует предложения рынка и помогает не только выбрать из них максимально соответствующие запросу клиента, но и определить наиболее ликвидные.": "بينما يختار الآخرون العقارات يدويًا، قمنا بتطوير منتج تكنولوجيا المعلومات الخاص بنا استنادًا إلى الذكاء الاصطناعي، الذي يحلل عروض السوق ويساعد ليس فقط في اختيار تلك التي تناسب طلب العميل، ولكن أيضًا في تحديد العروض الأكثر سيولة.",
+    "Покупайте так, как вам удобно!": "اشتري بالطريقة التي تناسبك!",
+    "Покупка недвижимости": "شراء عقار",
+    "Покупка недвижимости в Турции — одно из наиболее стабильных направлений для инвестирования: качественные объекты с высокой доходностью здесь можно получить за сравнительно меньшие деньги, нежели в других странах. Также недвижимость в Турции привлекает возможностью оформления гражданства по упрощенной схеме, освобождением от оплаты НДС и получением других льгот.": "يعد شراء العقارات في تركيا أحد أكثر المجالات استقرارًا للاستثمار: حيث يمكن الحصول على عقارات عالية الجودة ذات عوائد عالية مقابل أموال أقل نسبيًا مقارنة بالدول الأخرى. كما أن العقارات في تركيا تجذب إمكانية الحصول على الجنسية بموجب مخطط مبسط والإعفاء من ضريبة القيمة المضافة والحصول على مزايا أخرى.",
+    "Политика обработки персональных данных": "سياسة معالجة البيانات الشخصية",
+    "Полная безопасность": "الأمن الكامل",
+    "Пользовательское соглашение при использовании данных": "اتفاقية المستخدم عند استخدام البيانات",
+    "Пользовательское соглашение при использовании сайта": "اتفاقية المستخدم عند استخدام الموقع",
+    "Поможем получить выгодные условия по рассрочке и кредиту": "سنساعدك في الحصول على شروط مواتية على الأقساط والقروض",
+    "Популярные локации": "المواقع الشعبية",
+    "Посмотреть каталог объектов": "عرض كتالوج الكائنات",
+    "Почему клиенты выбирают именно нас?": "لماذا يختارنا العملاء؟",
+    "Пресса": "يضعط",
+    "Прессе": "يضعط",
+    "Приветствую вас, дорогой гость!": "تحياتي لك عزيزي الضيف!",
+    "Приобретая недвижимость в Oneteam, вы ничем не рискуете.": "من خلال شراء العقارات من Oneteam، فإنك لا تخاطر بأي شيء.",
+    "Проконсультируем и поможем оформить все документы": "سننصحك ونساعدك في إعداد جميع المستندات",
+    "Работа у нас": "اعمل معنا",
+    "Расположение и инфраструктура": "الموقع والبنية التحتية",
+    "Рассрочка": "خطة التقسيط",
+    "Регион": "منطقة",
+    "Регионы": "المناطق",
+    "Сад": "حديقة",
+    "Свяжитесь с нами": "اتصل بنا",
+    "Связаться": "اتصال",
+    "Северная Америка": "أمريكا الشمالية",
+    "Сначала дешевые": "تلك الرخيصة أولا",
+    "Сначала дешёвые": "رخيصة أولا",
+    "Сначала дорогие": "عزيزي أولا",
+    "Сначала новые": "الجديدة أولا",
+    "Снять": "اخلع",
+    "Согласен на обработку": "أوافق على المعالجة",
+    "Согласен на обработку персональных данных": "أوافق على معالجة البيانات الشخصية",
     "Спален": "غرف نوم",
-    "Спальни": "Bedrooms",
-    "Спальни, Ванные": "Bedrooms,bathrooms",
-    "Страна": "Locations",
-    "Страны": "Countries",
-    "ТВ": "TV",
-    "Таунхаусы": "Townhouses",
-    "Тип недвижимости": "Types",
-    "Тип объекта": "Types",
-    "Трасса": "Track",
-    "Турция": "Türkiye",
-    "Удалить все": "Delete all",
-    "Узнать больше": "To learn more",
-    "Участок": "Plot",
-    "Цена": "Price",
-    "Шале": "Chalets",
-    "Южная Америка": "South America",
-    "в": "in",
-    "ван": "Bat",
+    "Спальни": "غرف نوم",
+    "Спальни, Ванные": "غرف نوم، حمامات",
+    "Специалисты Oneteam говорят на русском, турецком, английском, немецком, иранском, арабском языках. Поэтому можете не волноваться: наше с вами сотрудничество не затруднит языковой барьер.": "يتحدث متخصصو Oneteam اللغة الروسية والتركية والإنجليزية والألمانية والإيرانية والعربية. لذلك، لا داعي للقلق: لن يعيق حاجز اللغة تعاوننا معك.",
+    "Срок сдачи": "موعد التسليم",
+    "Страна": "بلد",
+    "Страны": "بلدان",
+    "ТВ": "تلفزيون",
+    "Таунхаусы": "تاون هاوس",
+    "Тестовая версия программы": "نسخة تجريبية من البرنامج",
+    "Тип недвижимости": "نوع الملكية",
+    "Тип объекта": "نوع الكائن",
+    "Трасса": "طريق",
+    "Турция": "تركيا",
+    "Удалить все": "احذف كل شيء",
+    "Узнать больше": "لتعلم المزيد",
+    "Участок": "حبكة",
+    "ФИО": "الاسم الكامل",
+    "Хороших агентств в Турции много, но у Oneteam есть серьезный козырь.": "هناك العديد من الوكالات الجيدة في تركيا، لكن Oneteam لديه ورقة رابحة خطيرة.",
+    "Цена": "سعر",
+    "Чем мы будем вам полезны?": "كيف يمكننا أن نكون مفيدين لك؟",
+    "Шале": "شاليه",
+    "Это позволяет предлагать нашим клиентам специальные расценки, которые ниже, чем если бы вы приобретали напрямую у застройщика.": "يتيح لنا ذلك أن نقدم لعملائنا أسعارًا خاصة أقل مما لو قمت بالشراء مباشرة من المطور.",
+    "Южная Америка": "أمريكا الجنوبية",
+    "апартаменты": "شقق سكنية",
+    "в": "الخامس",
+    "ван": "سيارة نقل",
+    "вы приобретаете надежного партнера, который разбирается в своеобразном характере турецкого рынка недвижимости, где многое зависит от личных связей, и знает, как обойти «подводные камни» законодательства и защитить вас от мошеннических схем.": "أنت تحصل على شريك موثوق به يفهم الطبيعة الفريدة لسوق العقارات التركية، حيث يعتمد الكثير على العلاقات الشخصية، ويعرف كيفية التحايل على مخاطر التشريعات وحمايتك من المخططات الاحتيالية.",
     "до": "قبل",
-    "кв.м": "sq.m",
-    "локации": "locations",
+    "кв.м": "متر مربع",
+    "локации": "المواقع",
     "объектов": "أشياء",
     "объявлений": "إعلانات",
-    "оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "leave your contact details and we will contact you as soon as possible",
+    "оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "اترك تفاصيل الاتصال الخاصة بك وسوف نتصل بك في أقرب وقت ممكن",
     "от": "من",
-    "персональных данных": "personal data",
-    "политикой конфеденциальности": "privacy policy",
-    "спал": "room",
-    "спальни": "Bedrooms"
+    "персональных данных": "بيانات شخصية",
+    "политикой конфеденциальности": "سياسة الخصوصية",
+    "спал": "نام",
+    "спальни": "غرف نوم"
 }
