--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -1,4 +1,5 @@
 {
+    "Oneteam подготовит для вас пул доступных вариантов, предоставит переводчика и юриста, и обеспечит бережное сопровождение на каждом этапе сделки.": "Oneteam stellt für Sie einen Pool an verfügbaren Optionen zusammen, stellt einen Übersetzer und einen Anwalt zur Verfügung und begleitet Sie sorgfältig in jeder Phase der Transaktion.",
     "Австралия": "Australien",
     "Азия": "Asien",
     "Анастасия": "Anastasia",
@@ -8,7 +9,9 @@
     "Балкон": "Balkon",
     "Бассейн": "Schwimmbad",
     "Без комиссии": "Ohne Provision",
+    "Благодаря налаженному партнерству с турецкими банками Oneteam осуществляет продажу недвижимости в Турции в рассрочку, в ипотеку (кредит) под минимальные проценты.": "Dank etablierter Partnerschaften mit türkischen Banken verkauft Oneteam Immobilien in der Türkei in Raten mit einer Hypothek (Darlehen) zu minimalen Zinsen.",
     "В избранное": "Zu den Favoriten",
+    "В портфеле Oneteam представлены высоколиквидные объекты, предназначенные для разных целей: для инвестиций, сдачи в аренду и просто для комфортной жизни. Все они поступают к нам напрямую от застройщиков, минуя посредников, и это значит, что мы можем предложить вам лучшие цены на них.": "Das Portfolio von Oneteam umfasst hochliquide Immobilien, die für unterschiedliche Zwecke bestimmt sind: zur Investition, zur Vermietung und einfach für ein angenehmes Leben. Sie alle kommen direkt von den Entwicklern zu uns und umgehen Zwischenhändler. Das bedeutet, dass wir Ihnen die besten Preise dafür anbieten können.",
     "ВНЖ в подарок": "Aufenthaltserlaubnis als Geschenk",
     "ВНЖ и Гражданство": "Aufenthaltserlaubnis",
     "Валюта": "Währung",
@@ -17,16 +20,21 @@
     "Ваш телефон": "Ihr Telefon",
     "Весь": "Alle",
     "Вид": "Aussicht",
+    "Возьмем вашу недвижимость в управление": "Überlassen Sie uns die Kontrolle über Ihr Eigentum",
     "Все": "Alle",
     "Все локации": "Alle Orte",
     "Все регионы": "Alle Regionen",
+    "Все сделки заключаются в соответствии с турецким законодательством и с применением инструментов минимизации рисков, а мы отчитываемся перед вами по всем производимым операциям — в том числе и финансовым.": "Alle Transaktionen werden in Übereinstimmung mit der türkischen Gesetzgebung und unter Verwendung von Risikominimierungsinstrumenten abgeschlossen. Wir berichten Ihnen über alle durchgeführten Transaktionen, auch über finanzielle.",
     "Все типы": "Alle Typen",
     "Всего": "Gesamt",
     "Вся": "Alle",
     "Вторичка": "Zweitwohnungen",
+    "Выбирая Oneteam": "Wählen Sie Oneteam",
+    "Выгодные условия": "Profitable Konditionen",
     "Горы": "Berge",
     "Гостиные": "Wohnzimmer",
     "Гражданство": "Staatsbürgerschaft",
+    "Давайте познакомимся.": "Lasst uns kennenlernen.",
     "До": "Vor",
     "До 1 км": "Bis 1 km",
     "До 2 км": "Bis 2 km",
@@ -34,6 +42,7 @@
     "До моря": "Zum Meer",
     "Дом": "Haus",
     "Дома, вилы, коттеджи": "Häuser, Villen, Cottages",
+    "Дома. виллы, коттеджи": "Zu Hause. Villen, Ferienhäuser",
     "Европа": "Europa",
     "Если у вас есть вопросы": "Wenn du Fragen hast",
     "Если у вас есть вопросы, оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "Wenn Sie Fragen haben, hinterlassen Sie Ihre Kontaktdaten und wir werden uns in Kürze mit Ihnen in Verbindung setzen",
@@ -51,8 +60,10 @@
     "Квартиры": "Wohnungen",
     "Квартиры под аренду": "Wohnungen zur Miete",
     "Квартиры, апартаменты": "Wohnungen, Apartments",
+    "Клиентоориентированность": "Kundenorientierung",
     "Команда": "Team",
     "Коммерческая": "Gewerbeimmobilien",
+    "Компания": "Unternehmen",
     "Консультант по продажам": "Verkaufsberaterin",
     "Контакты": "Kontakt",
     "Купить": "Kaufen",
@@ -61,17 +72,25 @@
     "Локации": "Standorte",
     "Локаций": "Standorten",
     "Локация": "Standort",
+    "Лучшие цены": "Die besten Preise",
     "Материк": "Kontinent",
     "Мебель": "Möbel",
+    "Меня зовут Фаиг Ализаде, я — владелец агентства": "Mein Name ist Faig Alizadeh, ich bin der Inhaber der Agentur",
     "Миссия": "Mission",
+    "Мы знаем, что сориентироваться в рынке недвижимости другой страны сложно, и заботимся о том, чтобы процесс покупки прошел для вас максимально комфортно.": "Wir wissen, dass es schwierig ist, sich auf dem Immobilienmarkt eines anderen Landes zurechtzufinden, und stellen sicher, dass der Kaufprozess für Sie so angenehm wie möglich ist.",
+    "Мы не просто продаем недвижимость от застройщика в Турции, а имеем личные договоренности со строительными компаниями.": "Wir verkaufen nicht nur Immobilien vom Bauträger in der Türkei, sondern haben auch persönliche Vereinbarungen mit Bauunternehmen.",
     "Мы предлагаем готовые стратегии инвестирования в зарубежную недвижимость": "Wir bieten fertige Strategien für Investitionen in ausländische Immobilien",
     "Найти": "Finden",
+    "Наша сфера деятельности — сделки с недвижимостью в Турции: мы помогаем клиентам купить, продать, арендовать или сдать в аренду коммерческие и жилые объекты.": "Unser Tätigkeitsfeld sind Immobilientransaktionen in der Türkei: Wir unterstützen Kunden beim Kauf, Verkauf, Miete oder Leasing von Gewerbe- und Wohnimmobilien.",
+    "Наши преимущества": "unsere Vorteile",
     "Неважно": "Nicht wichtig",
     "Недвижимость": "Immobilie",
     "Новостройки": "Neubauten",
     "Номер телефона": "Telefonnummer",
     "О компании": "Über das Unternehmen",
     "О проекте": "über das Projekt",
+    "Обеспечим постпродажный сервис": "Wir bieten After-Sales-Service",
+    "Обеспечим юридическое сопровождение на всех этапах сделки": "Wir bieten rechtliche Unterstützung in allen Phasen der Transaktion",
     "Общая": "Gesamt",
     "Общая площадь": "Gesamtfläche",
     "Объекты для получения гражданства :name за инвестиции": "Objekte für die Erlangung der :name Staatsbürgerschaft durch Investitionen",
@@ -89,6 +108,7 @@
     "От застройщика": "Vom Bauträger",
     "Отзывы": "Bewertungen",
     "Отправить заявку": "Anfrage senden",
+    "Офис агентства расположен в Анталье; зоны нашего особого интереса — это Манавгат, Кемер, Белек, Финике, Сиде, Алания, Махмутлар, Авсаллар, Каргыджак, Кестел. Также мы активно работаем и в других регионах Турецкой Республики, в частности, в Мерсине, Бодруме, Фетхие.": "Das Büro der Agentur befindet sich in Antalya; Unsere Gebiete von besonderem Interesse sind Manavgat, Kemer, Belek, Finike, Side, Alanya, Mahmutlar, Avsallar, Kargicak, Kestel. Wir sind auch in anderen Regionen der Republik Türkei aktiv tätig, insbesondere in Mersin, Bodrum und Fethiye.",
     "Паркинг в подарок": "Kostenloser Parkplatz",
     "Парковка": "Parkplatz",
     "Партнерам": "Für Partner",
@@ -99,13 +119,24 @@
     "Площади кв.м.": "Flächen in qm",
     "Площадь (кв.м)": "Fläche (qm)",
     "Пляж": "Strand",
+    "Подберем объекты под ваш запрос": "Wir wählen Objekte entsprechend Ihrer Anfrage aus",
+    "Пока другие подбирают объекты недвижимости вручную, мы разработали собственный IT-продукт на базе искусственного интеллекта, который анализирует предложения рынка и помогает не только выбрать из них максимально соответствующие запросу клиента, но и определить наиболее ликвидные.": "Während andere Immobilien manuell auswählen, haben wir ein eigenes IT-Produkt auf Basis künstlicher Intelligenz entwickelt, das Marktangebote analysiert und dabei hilft, nicht nur diejenigen auszuwählen, die den Wünschen des Kunden am besten entsprechen, sondern auch die liquidesten zu identifizieren.",
+    "Покупайте так, как вам удобно!": "Kaufen Sie, wie es zu Ihnen passt!",
     "Покупка недвижимости": "Kauf einer Immobilie",
+    "Покупка недвижимости в Турции — одно из наиболее стабильных направлений для инвестирования: качественные объекты с высокой доходностью здесь можно получить за сравнительно меньшие деньги, нежели в других странах. Также недвижимость в Турции привлекает возможностью оформления гражданства по упрощенной схеме, освобождением от оплаты НДС и получением других льгот.": "Der Kauf von Immobilien in der Türkei ist einer der stabilsten Investitionsbereiche: Hochwertige Immobilien mit hoher Rendite können hier für relativ weniger Geld als in anderen Ländern erworben werden. Immobilien in der Türkei bieten außerdem die Möglichkeit, die Staatsbürgerschaft im Rahmen eines vereinfachten Systems zu erhalten, von der Mehrwertsteuer befreit zu werden und andere Vorteile zu erhalten.",
     "Политика обработки персональных данных": "Datenschutzrichtlinie",
+    "Полная безопасность": "Vollständige Sicherheit",
     "Пользовательское соглашение при использовании данных": "Nutzungsvereinbarung bei Datenverwendung",
     "Пользовательское соглашение при использовании сайта": "Nutzungsvereinbarung bei Nutzung der Website",
+    "Поможем получить выгодные условия по рассрочке и кредиту": "Wir verhelfen Ihnen zu günstigen Konditionen für Raten und Kredite",
     "Популярные локации": "Beliebte Orte",
+    "Посмотреть каталог объектов": "Sehen Sie sich den Objektkatalog an",
+    "Почему клиенты выбирают именно нас?": "Warum entscheiden sich Kunden für uns?",
     "Пресса": "Presse",
     "Прессе": "Für die Presse",
+    "Приветствую вас, дорогой гость!": "Grüße, lieber Gast!",
+    "Приобретая недвижимость в Oneteam, вы ничем не рискуете.": "Durch den Kauf einer Immobilie bei Oneteam gehen Sie kein Risiko ein.",
+    "Проконсультируем и поможем оформить все документы": "Wir beraten Sie und helfen Ihnen bei der Erstellung sämtlicher Unterlagen",
     "Работа у нас": "Arbeiten bei uns",
     "Расположение и инфраструктура": "Lage und Infrastruktur",
     "Рассрочка": "Ratenzahlung",
@@ -125,10 +156,13 @@
     "Спален": "Schlafzimmer",
     "Спальни": "Schlafzimmer",
     "Спальни, Ванные": "Schlafzimmer, Badezimmer",
+    "Специалисты Oneteam говорят на русском, турецком, английском, немецком, иранском, арабском языках. Поэтому можете не волноваться: наше с вами сотрудничество не затруднит языковой барьер.": "Die Spezialisten von Oneteam sprechen Russisch, Türkisch, Englisch, Deutsch, Iranisch und Arabisch. Deshalb müssen Sie sich keine Sorgen machen: Unsere Zusammenarbeit mit Ihnen wird nicht durch die Sprachbarriere behindert.",
+    "Срок сдачи": "Frist",
     "Страна": "Land",
     "Страны": "Länder",
     "ТВ": "Fernseher",
     "Таунхаусы": "Reihenhäuser",
+    "Тестовая версия программы": "Testversion des Programms",
     "Тип недвижимости": "Art der Immobilie",
     "Тип объекта": "Objekttyp",
     "Трасса": "Rennstrecke",
@@ -137,11 +171,16 @@
     "Узнать больше": "Um mehr zu lernen",
     "Участок": "Grundstück",
     "ФИО": "Ihr name",
+    "Хороших агентств в Турции много, но у Oneteam есть серьезный козырь.": "Es gibt viele gute Agenturen in der Türkei, aber Oneteam hat einen echten Trumpf.",
     "Цена": "Preis",
+    "Чем мы будем вам полезны?": "Wie können wir für Sie nützlich sein?",
     "Шале": "Chalets",
+    "Это позволяет предлагать нашим клиентам специальные расценки, которые ниже, чем если бы вы приобретали напрямую у застройщика.": "Dadurch können wir unseren Kunden Sonderkonditionen anbieten, die günstiger sind, als wenn Sie direkt beim Entwickler kaufen würden.",
     "Южная Америка": "Südamerika",
+    "апартаменты": "Wohnungen",
     "в": "im",
     "ван": "bad",
+    "вы приобретаете надежного партнера, который разбирается в своеобразном характере турецкого рынка недвижимости, где многое зависит от личных связей, и знает, как обойти «подводные камни» законодательства и защитить вас от мошеннических схем.": "Sie gewinnen einen zuverlässigen Partner, der die Einzigartigkeit des türkischen Immobilienmarktes versteht, wo viel von persönlichen Beziehungen abhängt, und der weiß, wie er die Fallstricke der Gesetzgebung umgehen und Sie vor betrügerischen Machenschaften schützen kann.",
     "до": "vor",
     "кв.м": "qm",
     "локации": "standorte",
