--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,7 +1,7 @@
 {
     "Oneteam подготовит для вас пул доступных вариантов, предоставит переводчика и юриста, и обеспечит бережное сопровождение на каждом этапе сделки.": "Oneteam will prepare a pool of available options for you, provide a translator and lawyer, and provide careful support at every stage of the transaction.",
     "Австралия": "Australia",
-    "Азия": "Asia",
+    "Азия": "Oneteam will prepare a pool of available options for you, provide a translator and lawyer, and provide careful support at every stage of the transaction.",
     "Анастасия": "Anastasia",
     "Антарктида": "Antarctica",
     "Апартаменты": "Apartments",
@@ -42,6 +42,7 @@
     "До моря": "To the sea",
     "Дом": "House",
     "Дома, вилы, коттеджи": "Houses, villas, cottages",
+    "Дома. виллы, коттеджи": "At home. villas, cottages",
     "Европа": "Europe",
     "Если у вас есть вопросы": "If you have questions",
     "Если у вас есть вопросы, оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "If you have any questions, leave your contact details and we will get in touch with you as soon as possible",
@@ -58,6 +59,7 @@
     "История": "History",
     "Квартиры": "Flats",
     "Квартиры под аренду": "Apartments for rent",
+    "Квартиры, апартаменты": "Apartments, apartments",
     "Клиентоориентированность": "Customer focus",
     "Команда": "Team",
     "Коммерческая": "Commercial",
@@ -67,6 +69,7 @@
     "Купить": "Purchase",
     "Купить в рассрочку": "Buy in installments",
     "Лес": "Forest",
+    "Локации": "Locations",
     "Локаций": "Locations",
     "Локация": "Location",
     "Лучшие цены": "The best prices",
@@ -174,6 +177,7 @@
     "Шале": "Chalets",
     "Это позволяет предлагать нашим клиентам специальные расценки, которые ниже, чем если бы вы приобретали напрямую у застройщика.": "This allows us to offer our customers special rates that are lower than if you purchased directly from the developer.",
     "Южная Америка": "South America",
+    "апартаменты": "apartments",
     "в": "in",
     "ван": "Bat",
     "вы приобретаете надежного партнера, который разбирается в своеобразном характере турецкого рынка недвижимости, где многое зависит от личных связей, и знает, как обойти «подводные камни» законодательства и защитить вас от мошеннических схем.": "you are acquiring a reliable partner who understands the unique nature of the Turkish real estate market, where much depends on personal connections, and knows how to circumvent the pitfalls of legislation and protect you from fraudulent schemes.",
