--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -1,3 +1,195 @@
 {
-    "Сауна": "Sauna"
+    "Oneteam подготовит для вас пул доступных вариантов, предоставит переводчика и юриста, и обеспечит бережное сопровождение на каждом этапе сделки.": "Oneteam préparera pour vous une liste d'options disponibles, mettra à votre disposition un traducteur et un avocat et vous accompagnera soigneusement à chaque étape de la transaction.",
+    "Австралия": "Australie",
+    "Азия": "Asie",
+    "Анастасия": "Anastasie",
+    "Антарктида": "Antarctique",
+    "Апартаменты": "Appartements",
+    "Африка": "Afrique",
+    "Балкон": "Balcon",
+    "Бассейн": "Piscine",
+    "Без комиссии": "Aucune commission",
+    "Благодаря налаженному партнерству с турецкими банками Oneteam осуществляет продажу недвижимости в Турции в рассрочку, в ипотеку (кредит) под минимальные проценты.": "Grâce à des partenariats établis avec des banques turques, Oneteam vend des biens immobiliers en Turquie en plusieurs fois, avec une hypothèque (prêt) à un intérêt minime.",
+    "В избранное": "Vers les favoris",
+    "В портфеле Oneteam представлены высоколиквидные объекты, предназначенные для разных целей: для инвестиций, сдачи в аренду и просто для комфортной жизни. Все они поступают к нам напрямую от застройщиков, минуя посредников, и это значит, что мы можем предложить вам лучшие цены на них.": "Le portefeuille de Oneteam comprend des propriétés très liquides destinées à différents usages : à l'investissement, à la location et simplement à une vie confortable. Tous nous parviennent directement des développeurs, sans passer par les intermédiaires, ce qui signifie que nous pouvons vous proposer les meilleurs prix pour eux.",
+    "ВНЖ в подарок": "Titre de séjour en cadeau",
+    "ВНЖ и Гражданство": "Permis de séjour et citoyenneté",
+    "Валюта": "Devise",
+    "Ванна": "Bain",
+    "Ванные": "Salles de bains",
+    "Ваш телефон": "votre numéro de téléphone",
+    "Весь": "Tous",
+    "Вид": "Voir",
+    "Возьмем вашу недвижимость в управление": "Laissez-nous prendre le contrôle de votre propriété",
+    "Все": "Tous",
+    "Все локации": "Tous les emplacements",
+    "Все регионы": "Toutes les régions",
+    "Все сделки заключаются в соответствии с турецким законодательством и с применением инструментов минимизации рисков, а мы отчитываемся перед вами по всем производимым операциям — в том числе и финансовым.": "Toutes les transactions sont conclues conformément à la législation turque et à l'aide d'outils de minimisation des risques, et nous vous rapportons toutes les transactions effectuées, y compris financières.",
+    "Все типы": "Tous les types",
+    "Всего": "Total",
+    "Вся": "Tous",
+    "Вторичка": "Secondaire",
+    "Выбирая Oneteam": "Choisir Oneteam",
+    "Выгодные условия": "Conditions avantageuses",
+    "Горы": "Montagnes",
+    "Гостиные": "Salons",
+    "Гражданство": "Citoyenneté",
+    "Давайте познакомимся.": "Familiarisons-nous.",
+    "До": "Avant",
+    "До 1 км": "Jusqu'à 1km",
+    "До 2 км": "Jusqu'à 2 km",
+    "До 500 м": "Jusqu'à 500 m",
+    "До моря": "À la mer",
+    "Дом": "Maison",
+    "Дома, вилы, коттеджи": "Maisons, villas, chalets",
+    "Дома. виллы, коттеджи": "À la maison. villas, chalets",
+    "Европа": "L'Europe ",
+    "Если у вас есть вопросы": "Si tu as des questions",
+    "Если у вас есть вопросы, оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "Si vous avez des questions, laissez vos coordonnées et nous vous contacterons dans les plus brefs délais",
+    "Еще": "Plus",
+    "Жилая": "Résidentiel",
+    "Заказать просмотр": "Visualisation des commandes",
+    "Замки": "Serrures",
+    "Запросить актуальные проекты": "Demander des projets en cours",
+    "Заявка на бронь": "Demande de réservation",
+    "Иванов Алексей Петрович": "Ivanov Alexeï Petrovitch",
+    "Избранное": "Favoris",
+    "Инвестиции": "Investissements",
+    "Интернет": "l'Internet",
+    "История": "Histoire",
+    "Квартиры": "Appartements",
+    "Квартиры под аренду": "Appartement à louer",
+    "Квартиры, апартаменты": "Appartements, appartements",
+    "Клиентоориентированность": "Orientation client",
+    "Команда": "Équipe",
+    "Коммерческая": "un commercial",
+    "Компания": "Entreprise",
+    "Консультант по продажам": "Conseiller des ventes",
+    "Контакты": "Contacts",
+    "Купить": "Acheter",
+    "Купить в рассрочку": "Acheter en plusieurs fois",
+    "Лес": "Forêt",
+    "Локации": "Emplacements",
+    "Локаций": "Emplacements",
+    "Локация": "Emplacement",
+    "Лучшие цены": "Les meilleurs prix",
+    "Материк": "Continent",
+    "Мебель": "Meubles",
+    "Меня зовут Фаиг Ализаде, я — владелец агентства": "Je m'appelle Faig Alizadeh, je suis le propriétaire de l'agence",
+    "Миссия": "Mission",
+    "Мы знаем, что сориентироваться в рынке недвижимости другой страны сложно, и заботимся о том, чтобы процесс покупки прошел для вас максимально комфортно.": "Nous savons qu'il est difficile de s'orienter sur le marché immobilier d'un autre pays et nous veillons à ce que le processus d'achat soit aussi confortable que possible pour vous.",
+    "Мы не просто продаем недвижимость от застройщика в Турции, а имеем личные договоренности со строительными компаниями.": "Nous ne vendons pas seulement des biens immobiliers du promoteur en Turquie, mais avons des accords personnels avec des entreprises de construction.",
+    "Мы предлагаем готовые стратегии инвестирования в зарубежную недвижимость": "Nous proposons des stratégies toutes faites pour investir dans l'immobilier à l'étranger",
+    "Найти": "Trouver",
+    "Наша сфера деятельности — сделки с недвижимостью в Турции: мы помогаем клиентам купить, продать, арендовать или сдать в аренду коммерческие и жилые объекты.": "Notre domaine d'activité est celui des transactions immobilières en Turquie : nous aidons nos clients à acheter, vendre, louer ou louer des propriétés commerciales et résidentielles.",
+    "Наши преимущества": "nos avantages",
+    "Неважно": "Cela n'a pas d'importance",
+    "Недвижимость": "Immobilier",
+    "Новостройки": "Nouveaux bâtiments",
+    "Номер телефона": "Numéro de téléphone",
+    "О компании": "À propos de la société",
+    "О проекте": "à propos du projet",
+    "Обеспечим постпродажный сервис": "Nous fournirons un service après-vente",
+    "Обеспечим юридическое сопровождение на всех этапах сделки": "Nous fournirons un soutien juridique à toutes les étapes de la transaction",
+    "Общая": "Général",
+    "Общая площадь": "superficie totale",
+    "Объекты для получения гражданства :name за инвестиции": "Objets pour l'obtention de la citoyenneté :nom par investissement",
+    "Объявление": "Annonce",
+    "Объявлений": "Annonces",
+    "Объявлений не найдено": "Aucune annonce trouvée",
+    "Объявления": "les publicités",
+    "Озеро": "Lac",
+    "Ознакомлен с": "Familiarisé avec",
+    "Ознакомлен с политикой конфиденциальности": "J'ai lu la politique de confidentialité",
+    "Описание": "Description",
+    "Оплата криптовалютой": "Paiement avec crypto-monnaie",
+    "Особенности": "Particularités",
+    "От": "Depuis",
+    "От застройщика": "Du développeur",
+    "Отзывы": "Commentaires",
+    "Отправить заявку": "Envoyer une demande",
+    "Офис агентства расположен в Анталье; зоны нашего особого интереса — это Манавгат, Кемер, Белек, Финике, Сиде, Алания, Махмутлар, Авсаллар, Каргыджак, Кестел. Также мы активно работаем и в других регионах Турецкой Республики, в частности, в Мерсине, Бодруме, Фетхие.": "Le bureau de l'agence est situé à Antalya ; nos zones d'intérêt particulier sont Manavgat, Kemer, Belek, Finike, Side, Alanya, Mahmutlar, Avsallar, Kargicak, Kestel. Nous travaillons également activement dans d'autres régions de la République de Turquie, notamment à Mersin, Bodrum et Fethiye.",
+    "Паркинг в подарок": "Un parking en cadeau",
+    "Парковка": "Parking",
+    "Партнерам": "Pour les partenaires",
+    "Пентхаусы": "Penthouses",
+    "Первая линия": "Première ligne",
+    "Планировки квартир": "Dispositions des appartements",
+    "Площади (кв.м)": "Superficie (m²)",
+    "Площади кв.м.": "Superficie m²",
+    "Площадь (кв.м)": "Superficie (m²)",
+    "Пляж": "Plage",
+    "Подберем объекты под ваш запрос": "Nous sélectionnerons les objets selon votre demande",
+    "Пока другие подбирают объекты недвижимости вручную, мы разработали собственный IT-продукт на базе искусственного интеллекта, который анализирует предложения рынка и помогает не только выбрать из них максимально соответствующие запросу клиента, но и определить наиболее ликвидные.": "Alors que d’autres sélectionnent manuellement les biens immobiliers, nous avons développé notre propre produit informatique basé sur l’intelligence artificielle, qui analyse les offres du marché et aide non seulement à sélectionner celles qui correspondent le mieux à la demande du client, mais également à identifier les plus liquides.",
+    "Покупайте так, как вам удобно!": "Achetez comme cela vous convient !",
+    "Покупка недвижимости": "Acheter une propriété",
+    "Покупка недвижимости в Турции — одно из наиболее стабильных направлений для инвестирования: качественные объекты с высокой доходностью здесь можно получить за сравнительно меньшие деньги, нежели в других странах. Также недвижимость в Турции привлекает возможностью оформления гражданства по упрощенной схеме, освобождением от оплаты НДС и получением других льгот.": "L'achat de biens immobiliers en Turquie est l'un des domaines d'investissement les plus stables : des propriétés de haute qualité avec des rendements élevés peuvent être obtenues ici pour relativement moins d'argent que dans d'autres pays. En outre, l'immobilier en Turquie offre la possibilité d'obtenir la citoyenneté dans le cadre d'un régime simplifié, d'exonération de TVA et de bénéficier d'autres avantages.",
+    "Политика обработки персональных данных": "Politique de traitement des données personnelles",
+    "Полная безопасность": "Sécurité totale",
+    "Пользовательское соглашение при использовании данных": "Accord d'utilisation lors de l'utilisation des données",
+    "Пользовательское соглашение при использовании сайта": "Accord d'utilisation lors de l'utilisation du site",
+    "Поможем получить выгодные условия по рассрочке и кредиту": "Nous vous aiderons à obtenir des conditions avantageuses sur les versements et les prêts",
+    "Популярные локации": "Lieux populaires",
+    "Посмотреть каталог объектов": "Consulter le catalogue d'objets",
+    "Почему клиенты выбирают именно нас?": "Pourquoi les clients nous choisissent-ils ?",
+    "Пресса": "Presse",
+    "Прессе": "Presse",
+    "Приветствую вас, дорогой гость!": "Salutations, cher invité !",
+    "Приобретая недвижимость в Oneteam, вы ничем не рискуете.": "En achetant un bien immobilier chez Oneteam, vous ne risquez rien.",
+    "Проконсультируем и поможем оформить все документы": "Nous vous conseillerons et vous aiderons à préparer tous les documents",
+    "Работа у нас": "Travaille avec nous",
+    "Расположение и инфраструктура": "Localisation et infrastructures",
+    "Рассрочка": "Plan de versement",
+    "Регион": "Région",
+    "Регионы": "Régions",
+    "Сад": "Jardin",
+    "Свяжитесь с нами": "Contactez-nous",
+    "Связаться": "Contact",
+    "Северная Америка": "Amérique du Nord",
+    "Сначала дешевые": "Les moins chers d’abord",
+    "Сначала дешёвые": "Pas cher d'abord",
+    "Сначала дорогие": "Mes chers d'abord",
+    "Сначала новые": "Les nouveaux d'abord",
+    "Снять": "Décoller",
+    "Согласен на обработку": "J'accepte le traitement",
+    "Согласен на обработку персональных данных": "J'accepte le traitement des données personnelles",
+    "Спален": "Chambres",
+    "Спальни": "Chambres",
+    "Спальни, Ванные": "Chambres, salles de bains",
+    "Специалисты Oneteam говорят на русском, турецком, английском, немецком, иранском, арабском языках. Поэтому можете не волноваться: наше с вами сотрудничество не затруднит языковой барьер.": "Les spécialistes Oneteam parlent russe, turc, anglais, allemand, iranien et arabe. Ne vous inquiétez donc pas : notre coopération avec vous ne sera pas entravée par la barrière de la langue.",
+    "Срок сдачи": "Date limite",
+    "Страна": "Un pays",
+    "Страны": "Des pays",
+    "ТВ": "la télé",
+    "Таунхаусы": "Maisons de ville",
+    "Тестовая версия программы": "Version de test du programme",
+    "Тип недвижимости": "Type de propriété",
+    "Тип объекта": "Type d'objet",
+    "Трасса": "Itinéraire",
+    "Турция": "Turquie",
+    "Удалить все": "supprimer tout",
+    "Узнать больше": "Pour apprendre plus",
+    "Участок": "Parcelle",
+    "ФИО": "Nom et prénom",
+    "Хороших агентств в Турции много, но у Oneteam есть серьезный козырь.": "Il existe de nombreuses bonnes agences en Turquie, mais Oneteam a un sérieux atout.",
+    "Цена": "Prix",
+    "Чем мы будем вам полезны?": "Comment pouvons-nous vous être utiles ?",
+    "Шале": "Chalet",
+    "Это позволяет предлагать нашим клиентам специальные расценки, которые ниже, чем если бы вы приобретали напрямую у застройщика.": "Cela nous permet d'offrir à nos clients des tarifs spéciaux qui sont inférieurs à ceux si vous achetiez directement auprès du développeur.",
+    "Южная Америка": "Amérique du Sud",
+    "апартаменты": "appartements",
+    "в": "V",
+    "ван": "van",
+    "вы приобретаете надежного партнера, который разбирается в своеобразном характере турецкого рынка недвижимости, где многое зависит от личных связей, и знает, как обойти «подводные камни» законодательства и защитить вас от мошеннических схем.": "Vous faites l'acquisition d'un partenaire fiable qui comprend la nature unique du marché immobilier turc, où beaucoup dépend des relations personnelles, et qui sait comment contourner les pièges de la législation et vous protéger des stratagèmes frauduleux.",
+    "до": "avant",
+    "кв.м": "m²",
+    "локации": "Emplacements",
+    "объектов": "objets",
+    "объявлений": "annonces",
+    "оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "laissez vos coordonnées et nous vous contacterons dans les plus brefs délais",
+    "от": "depuis",
+    "персональных данных": "données personnelles",
+    "политикой конфеденциальности": "politique de confidentialité",
+    "спал": "dormi",
+    "спальни": "chambres"
 }
