--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -1,8 +1,17 @@
 {
+    "Oneteam подготовит для вас пул доступных вариантов, предоставит переводчика и юриста, и обеспечит бережное сопровождение на каждом этапе сделки.": "Oneteam sizin için mevcut seçeneklerden oluşan bir havuz hazırlayacak, tercüman ve avukat sağlayacak ve işlemin her aşamasında dikkatli destek sağlayacaktır.",
+    "Австралия": "Avustralya",
+    "Азия": "Asya",
     "Анастасия": "Anastasia",
+    "Антарктида": "Antarktika",
+    "Апартаменты": "Daireler",
+    "Африка": "Afrika",
     "Балкон": "Balkon",
     "Бассейн": "Havuz",
     "Без комиссии": "Komisyon yok",
+    "Благодаря налаженному партнерству с турецкими банками Oneteam осуществляет продажу недвижимости в Турции в рассрочку, в ипотеку (кредит) под минимальные проценты.": "Oneteam, Türk bankalarıyla kurulan ortaklıklar sayesinde Türkiye'deki gayrimenkulleri minimum faizle ipotek (kredi) karşılığında taksitli olarak satıyor.",
+    "В избранное": "Favorilere",
+    "В портфеле Oneteam представлены высоколиквидные объекты, предназначенные для разных целей: для инвестиций, сдачи в аренду и просто для комфортной жизни. Все они поступают к нам напрямую от застройщиков, минуя посредников, и это значит, что мы можем предложить вам лучшие цены на них.": "Oneteam'in portföyü farklı amaçlara yönelik oldukça likit mülkler içermektedir: yatırım, kiralama ve sadece konforlu bir yaşam için. Hepsi bize aracıları atlayarak doğrudan geliştiricilerden geliyor ve bu da size onlar için en iyi fiyatları sunabileceğimiz anlamına geliyor.",
     "ВНЖ в подарок": "Oturma izni hediye",
     "ВНЖ и Гражданство": "Oturma izni ve Vatandaşlık",
     "Валюта": "Para birimi",
@@ -11,14 +20,22 @@
     "Ваш телефон": "telefon numaran",
     "Весь": "Tüm",
     "Вид": "Manzara",
+    "Возьмем вашу недвижимость в управление": "Mülkünüzün kontrolünü bize bırakın",
     "Все": "Hepsi",
     "Все локации": "Tüm konumlar",
     "Все регионы": "Tüm bölgeler",
+    "Все сделки заключаются в соответствии с турецким законодательством и с применением инструментов минимизации рисков, а мы отчитываемся перед вами по всем производимым операциям — в том числе и финансовым.": "Tüm işlemler Türk mevzuatına uygun olarak ve risk minimizasyon araçları kullanılarak sonuçlandırılıyor ve finansal olanlar da dahil olmak üzere gerçekleştirilen tüm işlemler hakkında tarafınıza raporlanıyoruz.",
     "Все типы": "Tüm türler",
+    "Всего": "Toplam",
     "Вся": "Tüm",
     "Вторичка": "İkincil konut",
+    "Выбирая Oneteam": "Oneteam'i Seçmek",
+    "Выгодные условия": "Kârlı koşullar",
     "Горы": "Dağlar",
     "Гостиные": "Oturma odaları",
+    "Гражданство": "Vatandaşlık",
+    "Давайте познакомимся.": "Hadi tanışalım.",
+    "До": "Önce",
     "До 1 км": "1 km'ye kadar",
     "До 2 км": "2 km'ye kadar",
     "До 500 м": "500 m'ye kadar",
@@ -26,6 +43,7 @@
     "Дом": "Ev",
     "Дома, вилы, коттеджи": "Evler, villalar, kır evleri",
     "Дома. виллы, коттеджи": "Evde. villalar, evler",
+    "Европа": "Avrupa",
     "Если у вас есть вопросы": "Eğer soruların varsa",
     "Если у вас есть вопросы, оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "Herhangi bir sorunuz varsa, iletişim bilgilerinizi bırakın ve en kısa sürede sizinle iletişime geçeceğiz",
     "Еще": "Fazla",
@@ -42,8 +60,10 @@
     "Квартиры": "Daireler",
     "Квартиры под аренду": "Kiralık daireler",
     "Квартиры, апартаменты": "Daireler, apartmanlar",
+    "Клиентоориентированность": "Müşteri odaklı",
     "Команда": "Takım",
     "Коммерческая": "Ticari",
+    "Компания": "Şirket",
     "Консультант по продажам": "Satış danışmanı",
     "Контакты": "İletişim",
     "Купить": "Satılık",
@@ -52,16 +72,25 @@
     "Локации": "Lokasyonlar",
     "Локаций": "Lokasyonlar",
     "Локация": "Lokasyon",
+    "Лучшие цены": "En iyi fiyatlar",
     "Материк": "Kıta",
     "Мебель": "Мебель",
+    "Меня зовут Фаиг Ализаде, я — владелец агентства": "Adım Faig Alizadeh, ajansın sahibiyim",
     "Миссия": "Misyon",
+    "Мы знаем, что сориентироваться в рынке недвижимости другой страны сложно, и заботимся о том, чтобы процесс покупки прошел для вас максимально комфортно.": "Başka bir ülkenin emlak piyasasında gezinmenin zor olduğunu biliyoruz ve satın alma sürecinin sizin için mümkün olduğunca konforlu olmasını sağlıyoruz.",
+    "Мы не просто продаем недвижимость от застройщика в Турции, а имеем личные договоренности со строительными компаниями.": "Türkiye'de sadece geliştiriciden gayrimenkul satmıyoruz, aynı zamanda inşaat şirketleriyle de kişisel anlaşmalarımız var.",
+    "Мы предлагаем готовые стратегии инвестирования в зарубежную недвижимость": "Yabancı gayrimenkul yatırımlarına yönelik hazır stratejiler sunuyoruz",
     "Найти": "Ara",
+    "Наша сфера деятельности — сделки с недвижимостью в Турции: мы помогаем клиентам купить, продать, арендовать или сдать в аренду коммерческие и жилые объекты.": "Faaliyet alanımız Türkiye'deki gayrimenkul işlemleridir: müşterilerimizin ticari ve konut amaçlı mülk satın almasına, satmasına, kiralamasına veya kiralamasına yardımcı oluyoruz.",
+    "Наши преимущества": "Bizim avantajlarımız",
     "Неважно": "önemli değil",
     "Недвижимость": "Emlak",
     "Новостройки": "Yeni binalar",
     "Номер телефона": "Telefon numarası",
     "О компании": "Şirket Hakkında",
     "О проекте": "Proje hakkında",
+    "Обеспечим постпродажный сервис": "Satış sonrası hizmet vereceğiz",
+    "Обеспечим юридическое сопровождение на всех этапах сделки": "İşlemin her aşamasında hukuki destek sağlayacağız",
     "Общая": "Toplam",
     "Общая площадь": "Toplam alan",
     "Объекты для получения гражданства :name за инвестиции": ":name vatandaşlığı için yatırım yapılan gayrimenkuller",
@@ -75,25 +104,39 @@
     "Описание": "Açıklama",
     "Оплата криптовалютой": "Kripto ile öde",
     "Особенности": "Özellikler",
+    "От": "İtibaren",
     "От застройщика": "Yapımcıdan",
     "Отзывы": "Yorumlar",
     "Отправить заявку": "İstek gönder",
+    "Офис агентства расположен в Анталье; зоны нашего особого интереса — это Манавгат, Кемер, Белек, Финике, Сиде, Алания, Махмутлар, Авсаллар, Каргыджак, Кестел. Также мы активно работаем и в других регионах Турецкой Республики, в частности, в Мерсине, Бодруме, Фетхие.": "Acente ofisi Antalya'da bulunmaktadır; özel ilgi alanlarımız Manavgat, Kemer, Belek, Finike, Side, Alanya, Mahmutlar, Avsallar, Kargıcak, Kestel'dir. Mersin, Bodrum, Fethiye başta olmak üzere Türkiye Cumhuriyeti'nin diğer bölgelerinde de aktif olarak çalışıyoruz.",
     "Паркинг в подарок": "Hediye olarak otopark",
     "Парковка": "Otopark",
     "Партнерам": "İş Ortakları için",
     "Пентхаусы": "Penthouse",
     "Первая линия": "İlk çizgi",
     "Планировки квартир": "Daire planları",
+    "Площади (кв.м)": "Alan (m²)",
     "Площади кв.м.": "Alan m²",
     "Площадь (кв.м)": "Alan metrekare",
     "Пляж": "Plaj",
+    "Подберем объекты под ваш запрос": "İsteğinize göre nesneleri seçeceğiz",
+    "Пока другие подбирают объекты недвижимости вручную, мы разработали собственный IT-продукт на базе искусственного интеллекта, который анализирует предложения рынка и помогает не только выбрать из них максимально соответствующие запросу клиента, но и определить наиболее ликвидные.": "Diğerleri gayrimenkul mülklerini manuel olarak seçerken, biz yapay zekaya dayalı, piyasa tekliflerini analiz eden ve yalnızca müşterinin isteğine en uygun olanı seçmekle kalmayıp aynı zamanda en likit olanları da belirleyen kendi BT ürünümüzü geliştirdik.",
+    "Покупайте так, как вам удобно!": "Size uygun olanı satın alın!",
     "Покупка недвижимости": "Bir mülk satın almak",
+    "Покупка недвижимости в Турции — одно из наиболее стабильных направлений для инвестирования: качественные объекты с высокой доходностью здесь можно получить за сравнительно меньшие деньги, нежели в других странах. Также недвижимость в Турции привлекает возможностью оформления гражданства по упрощенной схеме, освобождением от оплаты НДС и получением других льгот.": "Türkiye'de gayrimenkul satın almak yatırım için en istikrarlı alanlardan biridir: burada diğer ülkelere göre nispeten daha az parayla yüksek getiri sağlayan yüksek kaliteli mülkler elde edilebilir. Ayrıca Türkiye'deki gayrimenkuller, basitleştirilmiş bir program kapsamında vatandaşlık alma, KDV'den muafiyet ve diğer avantajlardan yararlanma olanağını da cezbetmektedir.",
     "Политика обработки персональных данных": "Kişisel Verilerin İşlenmesi Politikası",
+    "Полная безопасность": "Tam güvenlik",
     "Пользовательское соглашение при использовании данных": "Veri Kullanımı Kullanıcı Sözleşmesi",
     "Пользовательское соглашение при использовании сайта": "Siteyi kullanırken kullanıcı sözleşmesi",
+    "Поможем получить выгодные условия по рассрочке и кредиту": "Taksit ve kredilerde uygun koşullar elde etmenize yardımcı olacağız",
     "Популярные локации": "Popüler yerler",
+    "Посмотреть каталог объектов": "Nesnelerin kataloğunu görüntüleyin",
+    "Почему клиенты выбирают именно нас?": "Müşteriler neden bizi seçiyor?",
     "Пресса": "Basmak",
     "Прессе": "Basın için",
+    "Приветствую вас, дорогой гость!": "Selamlar sevgili misafir!",
+    "Приобретая недвижимость в Oneteam, вы ничем не рискуете.": "Oneteam'den gayrimenkul satın alarak hiçbir şeyi riske atmazsınız.",
+    "Проконсультируем и поможем оформить все документы": "Tüm belgeleri hazırlamanıza tavsiyelerde bulunacağız ve yardımcı olacağız",
     "Работа у нас": "Bizde Çalışmak",
     "Расположение и инфраструктура": "Konum ve altyapı",
     "Рассрочка": "Taksit",
@@ -102,6 +145,7 @@
     "Сад": "Bahçe",
     "Свяжитесь с нами": "Bize ulaşın",
     "Связаться": "İletişime geç",
+    "Северная Америка": "Kuzey Amerika",
     "Сначала дешевые": "Önce ucuz",
     "Сначала дешёвые": "Önce ucuz",
     "Сначала дорогие": "Önce pahalı",
@@ -109,12 +153,17 @@
     "Снять": "Kiralık",
     "Согласен на обработку": "Işlemeyi kabul ediyorum",
     "Согласен на обработку персональных данных": "Kişisel verilerin işlenmesini kabul ediyorum",
+    "Спален": "Yatak odaları",
     "Спальни": "Yatak odaları",
     "Спальни, Ванные": "Yatak odaları, Banyolar",
+    "Специалисты Oneteam говорят на русском, турецком, английском, немецком, иранском, арабском языках. Поэтому можете не волноваться: наше с вами сотрудничество не затруднит языковой барьер.": "Oneteam uzmanları Rusça, Türkçe, İngilizce, Almanca, İranca ve Arapça konuşmaktadır. Bu nedenle endişelenmenize gerek yok: Sizinle olan işbirliğimiz dil engeli nedeniyle engellenmeyecektir.",
+    "Срок сдачи": "Son teslim tarihi",
     "Страна": "Ülke",
     "Страны": "Ülkeler",
     "ТВ": "TV",
     "Таунхаусы": "Taş evler",
+    "Тестовая версия программы": "Programın test sürümü",
+    "Тип недвижимости": "Emlak Tipi",
     "Тип объекта": "Emlak Tipi",
     "Трасса": "Piste",
     "Турция": "Türkiye",
@@ -122,16 +171,25 @@
     "Узнать больше": "Daha fazla öğrenmek için",
     "Участок": "Parsel",
     "ФИО": "Adınız",
+    "Хороших агентств в Турции много, но у Oneteam есть серьезный козырь.": "Türkiye'de çok iyi ajanslar var ama Oneteam'in ciddi bir kozu var.",
     "Цена": "Fiyat",
+    "Чем мы будем вам полезны?": "Size nasıl faydalı olabiliriz?",
     "Шале": "Dağ evi",
+    "Это позволяет предлагать нашим клиентам специальные расценки, которые ниже, чем если бы вы приобретали напрямую у застройщика.": "Bu, müşterilerimize doğrudan geliştiriciden satın almanıza göre daha düşük özel fiyatlar sunmamıza olanak tanır.",
+    "Южная Америка": "Güney Amerika",
     "апартаменты": "apartmanlar",
     "в": "v",
+    "ван": "kamyonet",
+    "вы приобретаете надежного партнера, который разбирается в своеобразном характере турецкого рынка недвижимости, где многое зависит от личных связей, и знает, как обойти «подводные камни» законодательства и защитить вас от мошеннических схем.": "Pek çok şeyin kişisel bağlantılara bağlı olduğu Türk emlak piyasasının benzersiz doğasını anlayan, mevzuatın tuzaklarını nasıl aşacağınızı ve sizi dolandırıcılık planlarından nasıl koruyacağını bilen güvenilir bir ortak ediniyorsunuz.",
     "до": "önce",
     "кв.м": "metrekare",
+    "локации": "yerler",
     "объектов": "nesneler",
     "объявлений": "reklamlar",
     "оставьте свои контактные данные, и мы свяжемся с вами в самое ближайшее время": "iletişim bilgilerinizi bırakın, en kısa sürede sizinle iletişime geçeceğiz",
     "от": "itibaren",
     "персональных данных": "kişisel veri",
-    "политикой конфеденциальности": "gizlilik politikası"
+    "политикой конфеденциальности": "gizlilik politikası",
+    "спал": "uyudum",
+    "спальни": "yatak odaları"
 }
